--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.3.0",
     "next": "15.1.6",
+    "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
